<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.BaseFoodListActivity">

    <Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sortingCriteriaTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/sort_by_none"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginBottom="64dp"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingCriteriaTv"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/sortingButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sortBySugarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/grey"
            android:text="@string/SUGAR_btn" />

        <Button
            android:id="@+id/sortByProteinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/grey"
            android:text="@string/PROTEIN_btn" />

        <Button
            android:id="@+id/sortByCaloriesButton"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/grey"
            android:layout_height="wrap_content"
            android:text="@string/CALORIES_btn" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_fruit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortingButtonsLayout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/resetButton"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:text="@string/RESET_btn"
        android:backgroundTint="@color/grey"/>

</androidx.constraintlayout.widget.ConstraintLayout>
